--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -51,7 +51,7 @@ import '../styles/global.css';
           });
         })();
       </script>
-        <Seo seo={{ title: "EcoBuilder", description: "Page description", keywords: "", canonical: "", image: '', type: "website", themeColor: "#ffffff"}} />
+        <Seo seo={{ title: "EcoBuilder", description: "Page description", keywords: "", canonical: "https://nbv-1737365609552.netlify.app/undefined", image: 'https://nbv-1737365609552.netlify.app', type: "website", themeColor: "#ffffff"}} />
 		<meta charset="utf-8" />
 		<link
 			rel="icon"
